<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.UploadSong">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/songAuthor"
        android:layout_marginTop="70dp"
        android:hint="@string/author"
        android:textAlignment="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/songAuthor"
        android:id="@+id/songTitle"
        android:hint="@string/title"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/songURL"
        android:layout_marginTop="10dp"
        android:text="@string/empty"
        app:layout_constraintTop_toBottomOf="@id/songTitle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/songURL"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/selectFile"
        android:id="@+id/songSelectButton"
        android:onClick="selectFile"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:id="@+id/songUpload"
        app:layout_constraintTop_toBottomOf="@+id/songSelectButton"
        android:layout_marginTop="30dp"
        android:onClick="upload"/>
</androidx.constraintlayout.widget.ConstraintLayout>