<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/register"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-1dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerEmailAddress"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegister"
            android:hint="@string/emailaddres"
            android:layout_marginTop="40dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerPasswd"
            android:hint="@string/password"
            android:textAlignment="center"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/registerEmailAddress"
            android:layout_marginTop="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwdAgain"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/registerPasswd"
            android:textAlignment="center"
            android:hint="@string/password_Again"
            android:layout_marginTop="15dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_page"
            android:id="@+id/nextButton"
            android:onClick="nextRegister"
            app:layout_constraintTop_toBottomOf="@id/passwdAgain"
            android:layout_marginTop="15dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nextButton"
            android:layout_marginTop="15dp"
            android:onClick="closeRegister"
            android:text="@string/cancel"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>