<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.MainActivity">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/login"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/EmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/emailaddres"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/textViewLogin"
            tools:layout_editor_absoluteX="-2dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLogin"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/EmailLogin"
            tools:layout_editor_absoluteX="0dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:text="@string/permissiondenied"
            android:textAlignment="center"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:onClick="login"
            app:layout_constraintTop_toBottomOf="@id/error"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:onClick="openRegister"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>